<?xml version="1.0"?>
<package>
  <name>xtensor_ros</name>
  <version>0.1.0</version>
  <description>ROS messages for xtensor</description>
  <maintainer email="w.vollprecht@gmail.com">Wolf Vollprecht</maintainer>
  <author email="w.vollprecht@gmail.com">Wolf Vollprecht</author>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>